--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 </div>           
             </div>
             <div>
-                <h3>GUEST</h3>
+                <h3>AWAY</h3>
                 <div>
                     <h1 id="guest_score">0</h1>
                 </div>
