--- a/index.html
+++ b/index.html
@@ -1,38 +1,41 @@
 <html>
-    <head>
-        <link rel="stylesheet" href="index.css">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap" rel="stylesheet">
-    </head>
-    <body>
-        <div class="container">
-            <div>
-                <h3>HOME</h3>
-                <div>
-                    <h1 id="home_score">0</h1>
-                </div>
-                <div id= "button">
-                    <button id="add_one_home" onclick="add_one_home()">+1</button>
-                    <button id="add_two_home" onclick="add_two_home()">+2</button>
-                    <button id="add_three_home" onclick="add_three_home()">+3</button>
-                </div>           
-            </div>
-            <div>
-                <h3>AWAY</h3>
-                <div>
-                    <h1 id="guest_score">0</h1>
-                </div>
-                <div id = "button">
-                    <button id="add_one_guest" onclick="add_one_guest()">+1</button>
-                    <button id="add_two_guest" onclick="add_two_guest()">+2</button>
-                    <button id="add_three_guest" onclick="add_three_guest()">+3</button>
-                </div>
-            </div>
+  <head>
+    <link rel="stylesheet" href="index.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400..900&display=swap" rel="stylesheet">
+  </head>
+  <body>
+    <div class="container">
+      <div>
+        <h3>HOME</h3>
+        <div>
+          <h1 id="home_score">0</h1>
         </div>
-        <div class="bottom">
-            <button id="reset" onclick="reset()">Reset</button>
+        <div class="button-group">
+          <button id="add_one_home_btn"   onclick="add_one_home()">+1</button>
+          <button id="add_two_home_btn"   onclick="add_two_home()">+2</button>
+          <button id="add_three_home_btn" onclick="add_three_home()">+3</button>
         </div>
-        <script src="index.js"></script>
-    </body>
+      </div>
+
+      <div>
+        <h3>AWAY</h3>
+        <div>
+          <h1 id="guest_score">0</h1>
+        </div>
+        <div class="button-group">
+          <button id="add_one_guest_btn"   onclick="add_one_guest()">+1</button>
+          <button id="add_two_guest_btn"   onclick="add_two_guest()">+2</button>
+          <button id="add_three_guest_btn" onclick="add_three_guest()">+3</button>
+        </div>
+      </div>
+    </div>
+
+    <div class="bottom">
+      <button id="reset_btn" onclick="reset_scores()">Reset</button>
+    </div>
+
+    <script src="index.js"></script>
+  </body>
 </html>
